--- a/aktualnosci.html
+++ b/aktualnosci.html
@@ -36,9 +36,6 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="kosmetyki.html">Kosmetyki</a></li>
             <li class="current"><a href="aktualnosci.html">Aktualności</a></li>
-            <li>
-              <a href="zaprzyjaznione-strony.html">Zaprzyjaźnione strony</a>
-            </li>
             <li><a href="kontakt.html">Kontakt</a></li>
           </ul>
         </nav>
@@ -56,8 +53,7 @@
               </header>
 
               <div>
-                <h3>Aktualność 1</h3>
-                <p>Aktualnie nie ma aktualności &lt;3</p>
+                <h3>Brak nowych aktualności</h3>
               </div>
             </article>
           </div>
