Updated logo and text

--- a/aktualnosci.html
+++ b/aktualnosci.html
@@ -4,13 +4,13 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html lang="pl">
   <head>
     <title>Anastais - Aktualności</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
+      content="width=device-width, initial-scale=1"
     />
     <link rel="stylesheet" href="assets/css/main.css" />
   </head>
@@ -21,7 +21,12 @@
         <!-- Logo -->
         <h1 class="container">
           <a href="index.html" id="logo">
-            <div class="logo-text">Anastais - Kosmetyki naturalne</div>
+            <img
+              class="logoMobile"
+              src="images/logoMobile.svg"
+              alt="Anastais - Kosmetyki naturalne"
+            />
+            <div class="logo-text">Kosmetyki naturalne</div>
             <img
               class="logo"
               src="images/logo.svg"
